<resources>
    <string name="app_name">mobileFinalProject</string>
    <string name="title">Final Project</string>
    <string name="aviationTracker">Aviation Tracker</string>
    <string name="converter">Currency Converter</string>
    <string name="trivia">Trivia Questions</string>
    <string name="bearImg">Bear Images</string>
    <string name="convertButton">Convert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="results">Conversion Results</string>
    <string name="resultLayout">result goes here</string>
    <string name="error">Error</string>
    <string name="alertMenuTitle">Converter app instructions</string>
    <string name="menuInstructions">start by selecting the currency that you want to comvert to and from, then enter the amount you want converted and click the convert button.</string>
    <string name="emptyStringError">Please enter a valid amount.</string>
    <string name="invalidConversionAlert">Cannot convert from the same currency</string>
    <string name="APIAlert">Error parsing API response.</string>

</resources>