<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:text="by"
        />

        <TextView
            android:id="@+id/names"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/by"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintEnd_toEndOf="@+id/title"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="Tasmiara Islam, Carter Wright, Sharmarke Shafie, and Rishabh Puri"
            />

        <LinearLayout
            android:id="@+id/aviationButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="25dp"
            app:layout_constraintTop_toBottomOf="@+id/names">

            <Button
                android:id="@+id/aviationTracker"
                android:layout_width="165dp"
                android:layout_height="125dp"
                android:text="@string/aviationTracker"
                android:textSize="8pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/convertButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginRight="25dp"
            app:layout_constraintTop_toBottomOf="@+id/names">

            <Button
                android:id="@+id/converter"
                android:layout_width="165dp"
                android:layout_height="125dp"
                android:text="@string/converter"
                android:textSize="8pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/triviaButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            app:layout_constraintTop_toBottomOf="@+id/aviationButtonLayout">

            <Button
                android:id="@+id/trivia"
                android:layout_width="165dp"
                android:layout_height="125dp"
                android:text="@string/trivia"
                android:textSize="8pt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bearImgButtonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginRight="25dp"
            app:layout_constraintTop_toBottomOf="@+id/convertButtonLayout">

            <Button
                android:id="@+id/bearImg"
                android:layout_width="165dp"
                android:layout_height="125dp"
                android:text="@string/bearImg"
                android:textSize="8pt" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>